force-app/main/default/objects/numm__Schema_ecriture_generale__c/numm__Schema_ecriture_generale__c.object-meta.xml
<CustomObject>
    <label>Schéma d&#39;écriture générale</label>
    <nameField>
        <displayFormat>SEG-{00000}</displayFormat>
        <label>Schéma d&#39;écriture générale</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schémas d&#39;écritures générales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>