force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Categorie_de_compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Categorie_de_compte__c</fullName>
    <formula>TEXT(numm__Compte_general__r.numm__Categorie_de_compte__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catégorie de compte</label>
    <type>Text</type>
</CustomField>