force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Collectif__c.field-meta.xml
<CustomField>
    <fullName>numm__Collectif__c</fullName>
    <formula>numm__Compte_general__r.numm__IdCtrlAccounting__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collectif</label>
    <type>Text</type>
</CustomField>