force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Compte_general__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte_general__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte général</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>Schémas d&#39;écritures générales</relationshipLabel>
    <relationshipName>Schemas_ecritures_generales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>