force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Erreur__c.field-meta.xml
<CustomField>
    <fullName>numm__Erreur__c</fullName>
    <formula>IF(
   numm__Repartition_Analytique__c &gt; 1, IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Erreur&quot;) &amp; &#39; La somme des taux de répartition sur les lignes analytique ne peut pas dépasser 100%.&#39;, &#39;&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erreur</label>
    <type>Text</type>
</CustomField>