force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Frais_Bancaires__c.field-meta.xml
<CustomField>
    <fullName>numm__Frais_Bancaires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frais Bancaires</label>
    <type>Checkbox</type>
</CustomField>