force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Lot__c.field-meta.xml
<CustomField>
    <fullName>numm__Lot__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Un lot correspond à un compte TTC, des comptes TVA et HT.
La somme débit = la somme crédit.
Si schéma d&#39;écriture comporte 2 comptes TTC, il y aura 2 lot à créer.</inlineHelpText>
    <label>Lot</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>