force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Repartition_Analytique__c.field-meta.xml
<CustomField>
    <fullName>numm__Repartition_Analytique__c</fullName>
    <label>Répartition Analytique</label>
    <summarizedField>numm__Schema_ecriture_analytique__c.numm__Taux_repartition__c</summarizedField>
    <summaryForeignKey>numm__Schema_ecriture_analytique__c.numm__Schema_ecriture_generale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>