force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Schema_ecriture__c.field-meta.xml
<CustomField>
    <fullName>numm__Schema_ecriture__c</fullName>
    <label>Schéma d&#39;écriture</label>
    <referenceTo>numm__Schema_Ecriture__c</referenceTo>
    <relationshipLabel>Schémas d&#39;écritures générales</relationshipLabel>
    <relationshipName>Schemas_ecritures_generales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>