force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Taux_de_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__Taux_de_TVA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Taux de TVA</label>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipLabel>Schémas d&#39;écritures générales</relationshipLabel>
    <relationshipName>Schemas_ecritures_generales</relationshipName>
    <type>Lookup</type>
</CustomField>