force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Taux_repartition__c.field-meta.xml
<CustomField>
    <fullName>numm__Taux_repartition__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Indiquer le taux de répartition sur les comptes HT pour le montant HT.
Pour les comptes TTC et TVA laisser par défaut 100.00%
Si un seul compte HT laisser 100.00%
Si plusieurs compte HT mettre 0.00% si vous ne connaissez pas la répartition à reprendre</inlineHelpText>
    <label>Taux de répartition</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>