force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__TECH_Categorie_compte__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Categorie_compte__c</fullName>
    <label>TECH Catégorie compte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>