force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__TECH_Collectif__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Collectif__c</fullName>
    <formula>numm__Compte_general__r.numm__IdCtrlAccounting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Collectif</label>
    <type>Text</type>
</CustomField>