force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__TECH_Nombre_de_lignes_analytiques__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Nombre_de_lignes_analytiques__c</fullName>
    <label>TECH Nombre de lignes analytiques</label>
    <summaryForeignKey>numm__Schema_ecriture_analytique__c.numm__Schema_ecriture_generale__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>