force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Type_de_transaction__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_transaction__c</fullName>
    <label>Type de transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biens et services</fullName>
            </value>
            <value>
                <fullName>Immobilisations</fullName>
            </value>
            <value>
                <fullName>Marchandises</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>