force-app/main/default/objects/numm__Schema_ecriture_generale__c/fields/numm__Valide__c.field-meta.xml
<CustomField>
    <fullName>numm__Valide__c</fullName>
    <formula>IF(
   numm__Repartition_Analytique__c &gt; 1, false, true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valide</label>
    <type>Checkbox</type>
</CustomField>