force-app/main/default/objects/numm__Schema_ecriture_generale__c/validationRules/numm__CannotHaveAnalyticsIfAccCodeNotAnaly.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CannotHaveAnalyticsIfAccCodeNotAnaly</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(numm__Compte_general__r.numm__HasAnalytics__c),
  numm__TECH_Nombre_de_lignes_analytiques__c &gt; 0
)</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas ajouter de ligne de schéma d&#39;écriture analytique sur cette ligne de schéma d&#39;écriture générale car son compte général n&#39;est pas suivi par analytique.</errorMessage>
</ValidationRule>